@@ -1,5 +1,9 @@
 2004-11-18  Mike Kestner  <mkestner@novell.com>
 
+	* generator/AliasGen.cs : make this a SimpleGen.
+
+2004-11-18  Mike Kestner  <mkestner@novell.com>
+
 	* parser/gapi2xml.pl : fix a missing semi in a vm regex.
 	* */*-api.raw : regen with missing vms.
 
